# DataclassInitializer

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/dataclass_initializer/: README.md  __init__.py  initializer.py  typevar_resolver.py  validator.py
tests/: test.py
